# Django

./: .gitignore  .python-version
Day1/: pyproject.toml
Day1/config/: settings.py  urls.py
Day1/templates/: batter.html  batters.html  gugu.html
Day2_Challenge/: .python-version
Day2_Challenge/config/: settings.py
Day2_Challenge/todo/: models.py
Day2_강의실습/: .python-version  pyproject.toml
Day2_강의실습/bookmark/: admin.py  models.py  views.py
Day2_강의실습/bookmark/migrations/: 0001_initial.py
Day2_강의실습/config/: settings.py  urls.py
Day3_강의실습/: .python-version  pyproject.toml
Day3_강의실습/blog/: admin.py  models.py  views.py
Day3_강의실습/config/: settings.py  urls.py
Day3_강의실습/templates/: blog_list.html  login.html  signup.html
TodoListApp_Challenge/: pyproject.toml
TodoListApp_Challenge/config/: settings.py  urls.py
TodoListApp_Challenge/templates/: todo_info.html  todo_list.html
TodoListApp_Challenge/todo/: admin.py  views.py
TodoListApp_Challenge/users/: views.py
