[tool.poetry]
name = "to do list app  만들기"
version = "0.1.0"
description = "django  chapter02 challenge"
authors = ["Justman-yzz <a01088744395@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
django = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
